{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 51,
  "lineage": "4298360c-44e5-8562-d703-bf14b9039a69",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lunx_dev_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfa91bdbc3be780c",
            "arn": "arn:aws:ec2:us-west-2:192378441584:instance/i-0e9e35331bfb3348f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9e35331bfb3348f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lunxkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e968e34229d53a2",
            "private_dns": "ip-10-123-1-113.us-west-2.compute.internal",
            "private_ip": "10.123.1.113",
            "public_dns": "ec2-35-166-105-176.us-west-2.compute.amazonaws.com",
            "public_ip": "35.166.105.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05677c395ab3afb1b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016f381089c3106cc",
            "tags": {
              "Name": "lunx-dev-node"
            },
            "tags_all": {
              "Name": "lunx-dev-node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-022e97cb0affe5576"
            ]
          },
          "dependencies": [
            "aws_key_pair.lunx_auth",
            "aws_security_group.lunx_sg",
            "aws_subnet.lunx_public_subnet",
            "aws_vpc.lunx_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lunx_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:192378441584:internet-gateway/igw-0cde153995c1b9310",
            "id": "igw-0cde153995c1b9310",
            "owner_id": "192378441584",
            "tags": {
              "Name": "lunx_dev_igw"
            },
            "tags_all": {
              "Name": "lunx_dev_igw"
            },
            "vpc_id": "vpc-0d05d878c18ff044b"
          },
          "dependencies": [
            "aws_vpc.lunx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "lunx_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cde153995c1b9310",
            "id": "r-rtb-093baf7ad5099c8161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093baf7ad5099c816",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lunx_internet_gateway",
            "aws_route_table.lunx_public_rt",
            "aws_vpc.lunx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lunx_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:192378441584:route-table/rtb-093baf7ad5099c816",
            "id": "rtb-093baf7ad5099c816",
            "owner_id": "192378441584",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cde153995c1b9310",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lunx_public_rt"
            },
            "tags_all": {
              "Name": "lunx_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d05d878c18ff044b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lunx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lunx_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e313d6e4eb872b4",
            "route_table_id": "rtb-093baf7ad5099c816",
            "subnet_id": "subnet-016f381089c3106cc"
          },
          "dependencies": [
            "aws_route_table.lunx_public_rt",
            "aws_subnet.lunx_public_subnet",
            "aws_vpc.lunx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lunx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:192378441584:security-group/sg-022e97cb0affe5576",
            "description": "lunx security group for development environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022e97cb0affe5576",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.115.239.96/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lunx_dev_sg",
            "name_prefix": "",
            "owner_id": "192378441584",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d05d878c18ff044b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lunx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lunx_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:192378441584:subnet/subnet-016f381089c3106cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016f381089c3106cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "192378441584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lunx-dev-public"
            },
            "tags_all": {
              "Name": "lunx-dev-public"
            },
            "vpc_id": "vpc-0d05d878c18ff044b"
          },
          "dependencies": [
            "aws_vpc.lunx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lunx_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:192378441584:vpc/vpc-0d05d878c18ff044b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-00a19ea2ca404b6cc",
            "default_route_table_id": "rtb-050151b5e13541ae6",
            "default_security_group_id": "sg-030e26c8732b9dd4a",
            "dhcp_options_id": "dopt-09ac3aa56d8441505",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d05d878c18ff044b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050151b5e13541ae6",
            "owner_id": "192378441584",
            "tags": {
              "Name": "lunx_dev_env"
            },
            "tags_all": {
              "Name": "lunx_dev_env"
            }
          }
        }
      ]
    }
  ]
}